# StubHub.Data.Core.ContextAbstractionGraph

./: .env.example  .gitignore  CLAUDE.md  README.md  justfile  pyproject.toml
.github/workflows/: all-checks-successful.yaml  claude-pr-review.yaml  lint-test-python.yaml
cli/: harness.py
content/knowledge/: alert_classification.yml  clustering_guide.yml  dag_catalog.yml  data_quality_checks.yml  database_classes.yml  dbt_project_structure.yml  (+19 more)
docs/: architecture.md  context-graphs-in-agentic-ai-research.md  shift-integration-guide.md  stubhub-data-team-workflow-analysis.md
scripts/: run_live_test.sh
tests/: test_api.py  test_conformance.py  test_conformance_add_dbt_tests.py  test_conformance_configure_ingestion_pipeline.py  test_conformance_create_etl_pipeline.py  test_conformance_create_staging_model.py  test_conformance_fix_model_bug.py  test_conformance_generate_schema_yml.py  test_conformance_table_optimizer.py  test_conformance_thread_field_through_pipeline.py  test_conformance_triage_ae_alert.py  test_context.py  test_decisions.py  test_e2e_add_column.py  test_e2e_add_dbt_tests.py  test_e2e_configure_ingestion_pipeline.py  test_e2e_create_etl_pipeline.py  test_e2e_create_staging_model.py  test_e2e_fix_model_bug.py  test_e2e_generate_schema_yml.py  test_e2e_table_optimizer.py  test_e2e_thread_field_through_pipeline.py  test_e2e_triage_ae_alert.py  test_evaluator.py  test_loaders.py  test_loops.py  test_registry.py  test_shift_driver.py  test_snapshot.py  test_tool_filtering_e2e.py  test_trace.py  test_types.py  test_validation.py  test_walker.py
(+232 files in other folders)
